fixing OL numbering on Safari when PRE inside LI

--- a/_sass/jekyll-theme-cs50.scss
+++ b/_sass/jekyll-theme-cs50.scss
@@ -164,10 +164,10 @@ li:first-child, li + li {
     }
 }
 li > blockquote,
-li > div.highlighter-rouge,
 li > img {
     margin-top: .25rem;
 }
+li > div.highlighter-rouge,
 li > p {
     margin-top: 1rem;
 }
@@ -190,6 +190,11 @@ pre {
     @extend .border;
     background-color: $gray-100;
     padding: $table-cell-padding;
+}
+
+// Ensure number appears when li contains pre
+pre {
+    overflow: initial;
 }
 
 // Prevent wrapping on iOS
